--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2021"
 
 [workspace]
-members = ["factory_method", "state", "decorator"]
+members = ["abstract_factory", "factory_method", "state", "decorator"]
