refactor(observer): move observer to its own crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,3 @@
-[package]
-name = "rust-patterns"
-version = "0.1.0"
-edition = "2021"
-
 [workspace]
 members = [
   "strategy",
@@ -10,4 +5,5 @@ members = [
   "factory_method",
   "state",
   "decorator",
+  "observer",
 ]
